0030833: Visualization - Graphic3d_Camera constructor's exceptions

Field's initialization part has been added to Graphic3d_Camera constructor receiving Handle(Graphic3d_Camera).